--- a/.env.docker
+++ b/.env.docker
@@ -10,7 +10,7 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=db_apilumemrest
+DB_HOST=database_apiRestLumem
 DB_PORT=3306
 DB_DATABASE=apilumemrest
 DB_USERNAME=apilumemrest
